feat: implemented logic add task in group
